[metadata]
name = tabular-rl
version = 0.1.0
description = Tabular Reinforcement Learning
author = Shehab Yasser
license = MIT

[options]
packages = find:
python_requires = >=3.9
install_requires =
    numpy>=2.0

[options.extras_require]
dev =
    pytest>=7.0
    mypy>=1.0
    tox>=4.0

[mypy]
strict = True
